adding second ws listener

--- a/play/aws-alb-tg/vars/main.yml
+++ b/play/aws-alb-tg/vars/main.yml
@@ -3,6 +3,7 @@
 
 aws_alb_tg_tg_name: test-target-group
 aws_alb_tg_tg_ws_name: test-target-group-ws
+aws_alb_tg_tg_redirect_name: test-target-group-redirect
 
 aws_alb_tg_alb_name: test-alb-name
 aws_alb_tg_region: us-east-1
@@ -22,8 +23,24 @@ aws_alb_tg_alb_listeners:
     Certificates:
       - CertificateArn: "arn:aws:acm:us-east-1:329942816198:certificate/338d2752-79c7-4cb6-a022-eb2f0d558704"
     SslPolicy: ELBSecurityPolicy-2015-05
+    Rules:
+      - Conditions:
+          - Field: path-pattern
+            Values:
+              - '/socket.io'
+        Actions:
+          - TargetGroupName: "{{ aws_alb_tg_tg_ws_name }}"
+            Type: forward
+        Priority: '1'
+  - Protocol: HTTP
+    Port: 80
+    DefaultActions:
+      - Type: forward
+        TargetGroupName: "{{ aws_alb_tg_tg_redirect_name }}"
 
 aws_alb_tg_target_groups:
   - name: "{{ aws_alb_tg_tg_name }}"
   - name: "{{ aws_alb_tg_tg_ws_name }}"
     stickiness_enabled: True
+  - name: "{{ aws_alb_tg_tg_redirect_name }}"
+    port: 8080
